--- a/finbot/apps/web/templates/base.html
+++ b/finbot/apps/web/templates/base.html
@@ -76,6 +76,7 @@
     <!-- JavaScript -->
     <script src="{{ url_for('static', path='js/common/agreement-check.js') }}"></script>
     <script src="{{ url_for('static', path='js/common/utils.js') }}"></script>
+    <script src="{{ url_for('static', path='js/common/api.js') }}"></script>
     <script src="{{ url_for('static', path='js/web/main.js') }}"></script>
     {% block extra_js %}{% endblock %}
 
